--- a/views/user/home.hbs
+++ b/views/user/home.hbs
@@ -154,10 +154,10 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
-        {{!-- <a href="index.html" class="navbar-brand p-0">
-           <img style="width: 90px;" src="img/NSS_Emblem.png" alt="">
-        </a> --}}
+    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0" style="color: white;">
+        <a href="index.html" class="navbar-brand p-0">
+           <img style="width: 170px;height:90px" src="https://universitykart.b-cdn.net//Content/upload/admin/2gxbml1q.ori.jpg" alt="">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -330,7 +330,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="w-100" src="img/poly1.jpeg" alt="Image">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                    <div class="carousel-caption d-flex flex-column align-items-center padding:20px">
                         <div class="p-3" style="max-width: 900px;">
                                    <form action="/searchMaterial" class="seach" method="post">
                                         <input type="text" class="searchBox" name="subject" placeholder="Search For study material">
@@ -397,15 +397,15 @@
                 <div class="col-lg-5" style="min-height: 300px;">
                     <div class="position-relative h-100">
                         <img class="position-absolute w-100 h-100 rounded wow zoomIn" data-wow-delay="0.9s"
-                            src="https://gpt.karnataka.gov.in/gptkarkala/public/uploads/dept_logo1650431155.jpg" style="object-fit: cover;">
+                            src="https://png.pngtree.com/png-vector/20190304/ourmid/pngtree-education-logo-vector-image-png-image_736947.jpg" style="object-fit: cover;">
                     </div>
                 </div>
-                <div class="col-lg-5" style="min-height: 500px;">
+                {{!-- <div class="col-lg-5" style="min-height: 500px;">
                     <div class="position-relative h-100">
                         <img class="position-absolute w-100 h-100 rounded wow zoomIn" data-wow-delay="0.9s"
                             src="https://pbs.twimg.com/media/ERnu0A2XYAAUKP_.jpg" style="object-fit: cover;">
                     </div>
-                </div>
+                </div> --}}
             </div>
         </div>
     </div>
