--- a/views/user/home.hbs
+++ b/views/user/home.hbs
@@ -161,6 +161,8 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
+                         <h1>POLYHUB</h1>
+
         {{!-- <form action="/searchMaterial" class="seach" method="post">
             <input type="text" class="searchBox" name="subject" placeholder="Search For study material">
                 <input type="Submit" class="searchBtn">
@@ -169,7 +171,7 @@
             <div class="navbar-nav ms-auto py-0">
                     
                      {{!-- <img style="width: 90px;" src="img/College_Emblem.png" alt=""> --}}
-                    <h1>POLYHUB</h1>
+                 
                 <a href="/" class="nav-item nav-link active">Home</a>
               
                 <div class="nav-item dropdown">
@@ -330,10 +332,10 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="w-100" src="img/poly1.jpeg" alt="Image">
-                    <div class="carousel-caption d-flex flex-column align-items-center padding:20px">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                                    <form action="/searchMaterial" class="seach" method="post">
-                                        <input type="text" class="searchBox" name="subject" placeholder="Search For study material">
+                                        <input type="text" class="searchBox" name="subject" placeholder="Search For study materialS.">
                                             {{!-- <input type="Submit" class="searchBtn"> --}}
                                             <button type="submit" value="search" class="submitBtn"><i class="fa fa-search" style="font-size:15px"></i></button>
                                     </form>
