--- a/views/admin/add-new-Materials.hbs
+++ b/views/admin/add-new-Materials.hbs
@@ -1,8 +1,12 @@
 <link rel="stylesheet" href="/stylesheets/add-new-questionpaper.css" />
 <div class="question-content">
+  
   <div class="title">
-    <h1>Question Study Materials</h1>
+
+    <h1>Add New Study Materials</h1>
+      <a href="/admin/docs" class="btn btn-outline-success">View All</a>
   </div>
+
   <div class="form-container">
     <form
       action="/admin/add-new-studyMaterials"
