--- a/views/partials/dashboard.hbs
+++ b/views/partials/dashboard.hbs
@@ -10,8 +10,8 @@
   </div>
   <div class="card">
     <div class="box">
-      <h1>{{counts.photos}}</h1>
-      <h3>Photos</h3>
+      <h1>{{counts.doscList}}</h1>
+      <h3>Study Materials</h3>
     </div>
     <div class="icon-case">
       <i class="far fa-images"></i>
