--- a/views/partials/SideBarAdmin.hbs
+++ b/views/partials/SideBarAdmin.hbs
@@ -8,7 +8,10 @@
           <span>Departments</span>
         </li>
         <!--icon is there before text-->
-        <li><a href="/admin/staff-list"> <i class="fas fa-users"></i>&nbsp; <span>Staffs</span> </a></li>
+        <li><a href="/admin/staff-list"> <i class="fas fa-users"></i>&nbsp; <span>Staffs</span> </a></li>user-list
+          <li><a href="/admin/user-list"> <i class="fas fa-users"></i>&nbsp; <span>Users</span> </a></li>
+        
+        
         <li><a href="/admin/question-papers"><i class="far fa-newspaper"></i>&nbsp;
           <span>QuestionPapers</span></a></li>
         {{!-- <li><a href="#"><i class="fas fa-running"></i> &nbsp; <span>Activities</span></a></li> --}}
