--- a/views/admin/view-all-docs.hbs
+++ b/views/admin/view-all-docs.hbs
@@ -22,15 +22,15 @@
             <td>{{subject}}</td>
             <td>{{semester}}</td>
             <td>{{year_month}} </td>
-            {{!-- <td><a
-                href="/admin/edit-questionpaper/{{_id}}"
+            <td><a
+                href="/admin/edit-docs/{{_id}}"
                 class="edit-btn"
               >Edit</a>&nbsp;<a
-                href="/admin/delete-questionpaper/{{_id}}"
+                href="/admin/delete-docs/{{_id}}"
                 class="delete-btn"
                 onclick="return confirm('Are you sure you want to delete this Question Paper?');"
               >Delete</a></td>
-          </tr> --}}
+          </tr>
         {{/each}}
       </tbody>
     </table>
